--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: checkArgus
 Type: Package
 Title: Allows to run automated tests using Batchfiles on tau-Argus (if installed)
-Version: 0.1.0
+Version: 0.2.0
+Date: 2017-07-21
 Author: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
 Maintainer: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
 Description: This package allows to run pre-defined tests using batch-files on tau-argus and checks, if batch-files created from sdcTable were correct.
@@ -9,7 +10,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: testthat, data.table, prettydoc
-Depends: sdcTable (>= 0.22.5)
+Depends: sdcTable (>= 0.22.7)
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
